2023-12-24  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* wcfname.test:
	Avoid errors on parallel test processing.

2023-11-25  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* wcfname.test: Add tests for --recorder and *.fls.

2023-11-24  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* wcfname.test: Add test for file names with over-BMP
	(4byte UTF-8).
	https://tug.org/pipermail/tex-live/2023-November/049685.html

2023-10-27  Thanh Han The  <hanthethanh@gmail.com>

	* tounicode.c (deftounicode): sscanf %lX into unsigned long to
	avoid failure in text extraction on BigEndian systems. Report
	from hille42,
	https://tug.org/pipermail/pdftex/2023-October/009342.html.

2023-09-01  Karl Berry  <karl@freefriends.org>

	* ptexmac.h (cmp_return): a few words of documentation about
	the seemingly strange lack of handling the a==b case.
	Suggested by Jim Diamond.

2023-08-28  Karl Berry  <karl@freefriends.org>

	* tounicode.c (undump_to_unicode): check that gu->name
	(and gu->unicode_seq) did not undumped as NULL.
	Report from Gregory DUCK,
	https://tug.org/pipermail/tex-live/2023-August/049406.html.

2023-08-27  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* tests/{cnfline,partoken}.test:
	Make easier to test on Windows.

2023-08-26  Karl Berry  <karl@freefriends.org>

	* writet1.c (t1_builtin_enc): guard somewhat against corrupt pfbs,
	in the dup and dup dup checking. Report from Gregory DUCK,
	https://tug.org/pipermail/tex-live/2023-August/049400.html.

2023-08-20  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* {expanded,pdfimage,pdftex,pdftosrc,ttf2afm,wcfname,
	wprob}.test:
	Make easier to test on Windows.

2023-08-18  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* pdftex.web: minor cleanup (sync with etex.ch r24155)

2023-03-29  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* wcfname.test:
	Sync with update of fn-generate.perl.

2023-03-09  Karl Berry  <karl@tug.org>

	* TL'23 release.

2023-02-21  Phelype Oleinik  <phelype.oleinik@latex-project.org>
